# scipy2026_starsim_ai

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  analyze.sh  app.py  docker-compose.yml  docker-entrypoint.sh  docker_up.sh  mkdocs.yml  pyproject.toml  run_eval.sh  submission.md
analysis/: README.md  calculate_tokens.py  debug_evals.py  eval_performance.py  quantify_results.py  requirements.txt
claude_a2a/: README.md  check_a2a_servers.py  claude_code_executor.py  claude_code_server.py  mcp_secret.py
docs/: architecture.md  evaluation.md  execution-logging.md  getting-started.md  index.md
eval/: README.md  debug_run.sh  debug_run_parallel.sh  run_parallel.sh  shared.py
exam/: README.md  mark_exam.py  metadata.md  take_exam.py
logs/: .eval-set-id  2026-02-20T05-22-33+00-00_starsim-benchmark_24AbBSr25iP6DbfTNwbAUU.eval  2026-02-20T05-28-38+00-00_starsim-benchmark_ZLCP7ftbVUCYkyJGemYV6a.eval  2026-02-20T05-31-28+00-00_starsim-benchmark_cJYZyL7jjsGHAqt7Buvmjm.eval  2026-02-20T05-36-08+00-00_starsim-benchmark_o3aSqq3XArznRXayWWDh6n.eval  2026-02-21T18-19-01+00-00_starsim-agent-benchmark_fvVCTH6QVCnf3YW6NgN8Rb.eval  2026-02-21T23-13-37+00-00_starsim-agent-benchmark_is8afAWDad4aGHwkua8ba7.eval  2026-02-21T23-17-47+00-00_starsim-agent-benchmark_TyZxAzdJV3ZMH6hUrYrvNM.eval  2026-02-24T03-41-47+00-00_starsim-benchmark_bJiYS8Q7MELDd7HuTosWbY.eval  2026-02-24T03-43-44+00-00_starsim-benchmark_4oWUAvhaKeQNBjX6Gdpi4J.eval  2026-02-24T03-48-09+00-00_starsim-benchmark_YzXv9kYCiUw7TjfCPytj7a.eval  2026-02-24T03-52-42+00-00_starsim-agent-benchmark_YWGPf75BG6oS5uL8hcwoK7.eval  2026-02-24T04-20-40+00-00_starsim-agent-benchmark_EDh3iWBrUm3zhAujtRTazT.eval  2026-02-24T04-44-22+00-00_starsim-agent-benchmark_3KB6vdDti3y9YvXTfXw7wb.eval  2026-02-24T06-19-13+00-00_starsim-agent-benchmark_e62ZrWwxa6fUBFUhhE2jHi.eval  2026-02-24T06-31-50+00-00_starsim-agent-benchmark_N7k7seJ8fULQQ9HKWyX9Mw.eval  2026-02-24T06-39-09+00-00_starsim-agent-benchmark_Y8LnrSwE7qePb77Jezt8WT.eval  2026-02-24T06-42-07+00-00_starsim-agent-benchmark_JEroCYDTm5Dy3eM3qGEFMd.eval  2026-02-25T18-43-09+00-00_starsim-benchmark_GqBbPAtdkKa6FN3NWdk9ay.eval  2026-02-25T19-09-42+00-00_starsim-agent-benchmark_Fa4F2XRSAE3kYMkxNa9yoP.eval  2026-02-25T19-20-10+00-00_starsim-benchmark_hBH4VGrPv22VuJgQXhNSJt.eval  archive_logs.sh  (+1 more)
pages/: agent_logs.py
(+55 files in other folders)
