[project]
name = "scipy2026-starsim-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katherine Rosenfeld", email = "krosenf@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
scipy2026-starsim-ai = "ssai:main"

[tool.uv.build-backend]
module-name = "ssai"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
