[project]
name = "scipy2026-starsim-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katherine Rosenfeld", email = "krosenf@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.23",
    "anthropic>=0.83.0",
    "claude-agent-sdk>=0.1.38",
    "inspect-ai>=0.3.179",
    "python-dotenv>=1.2.1",
    "starsim>=3.1.1",
    "streamlit>=1.54.0",
]

[project.scripts]
scipy2026-starsim-ai = "ssai:main"
start-claude-code-server = "ssai.claude_code_server:main"

[tool.uv.build-backend]
module-name = "ssai"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = [
    "uses_llm: tests requiring an LLM backend",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
