[project]
name = "scipy2026-starsim-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katherine Rosenfeld", email = "info@starsim.org" },
    { name = "Cliff Kerr" },
    { name = "Jessica Lundin" },
    { name = "Robyn Stuart" },
    { name = "Romesh Abeysuriya" },
]
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.23",
    "anthropic>=0.83.0",
    "claude-agent-sdk>=0.1.38",
    "inspect-ai>=0.3.179",
    "ipykernel>=7.2.0",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "starsim>=3.1.1",
    "streamlit>=1.54.0",
]

[project.scripts]
scipy2026-starsim-ai = "claude_a2a:main"
start-claude-code-server = "claude_a2a.claude_code_server:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "claude_a2a"
module-root = ""

[tool.pytest.ini_options]
markers = [
    "uses_llm: tests requiring an LLM backend",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
